style: turn stadium list page responsive

--- a/stadiums/templates/stadiums/stadium_list.html
+++ b/stadiums/templates/stadiums/stadium_list.html
@@ -15,10 +15,15 @@
   </h2>
 </div>
 
-<!-- Table container with overflow -->
-<div class="overflow-x-auto sm:mx-0.5 lg:mx-0.5">
-  <div class="py-2 inline-block min-w-full sm:px-6 lg:px-8">
-    <div class="rounded-xl bg-white forced-colors:outline px-3 overflow-hidden
+
+<!-- Table container -->
+<div class="sm:mx-0.5">
+  <div class="max-w-[97vw] py-2 inline-block min-w-full min-w-full sm:px-6 lg:px-8">
+    <div class="
+    overflow-hidden relative z-10 rounded-md
+    rounded-xl 
+    bg-white 
+    forced-colors:outline px-3
     dark:before:rounded-xl 
     dark:shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
     dark:before:shadow-[0px_2px_8px_0px_rgba(0,_0,_0,_0.20),_0px_1px_0px_0px_rgba(255,_255,_255,_0.06)_inset]
@@ -26,95 +31,94 @@
     dark:before:-inset-px
     dark:before:absolute
     dark:bg-zinc-900
-    
     "> 
-      <table class="min-w-full rounded-md">
-        <thead class="border-bottom-white border-solid border-b-[#a1a1aa30] border-b-solid border-b-[1px]">
-          <tr>
-            <!-- Table headers -->
-            <th scope="col" class="px-2 py-4 text-sm font-medium text-gray-900 dark:text-white text-left">
-              <!-- Column header for stadium -->
-                #
-            </th>
-            <th scope="col" class="px-2 py-4 text-sm font-medium text-gray-900 dark:text-white text-left">
-              <!-- Column header for stadium -->
-              <a href="{% url 'stadium_list' %}?field=name{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
-                Estádio <i class="fa fa-caret-down" aria-hidden="true"></i>
-              </a>
-            </th>
-            <th scope="col" class="px-2 py-4 text-sm font-medium text-gray-900 dark:text-white text-left">
-              <!-- Column header for stadium -->
-              <a href="{% url 'stadium_list' %}?field=grass_type{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
-                Gramado <i class="fa fa-caret-down" aria-hidden="true"></i>
-              </a>
-            </th>
-            <th scope="col" class="px-2 py-4 text-sm font-medium text-gray-900 dark:text-white text-left">
-              <!-- Column header for stadium -->
-              <a href="{% url 'stadium_list' %}?field=crowd_capacity{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
-                Capacidade <i class="fa fa-caret-down" aria-hidden="true"></i>
-              </a>
-            </th>
-            <th scope="col" class="px-2 py-4 text-sm font-medium text-gray-900 dark:text-white text-left">
-              <!-- Column header for stadium -->
-              <a href="{% url 'stadium_list' %}?field=staterooms{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
-                Camarotes <i class="fa fa-caret-down" aria-hidden="true"></i>
-              </a>
-            </th>
-            <th scope="col" class="px-2 py-4 text-sm font-medium text-gray-900 dark:text-white text-left">
-              <!-- Column header for stadium -->
-              <a href="{% url 'stadium_list' %}?field=build_value{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
-                Valor de construção <i class="fa fa-caret-down" aria-hidden="true"></i>
-              </a>
-            </th>
-          </tr>
-        </thead>
-        <tbody>
-          <!-- Loop through countries -->
-          {% for stadium in page_obj %}
-          <!-- Apply row class -->
-          <tr class="border-b-[#a1a1aa30] border-b-solid border-b-[1px]">
-            <td class="px-2 py-4 whitespace-nowrap text-sm font-medium text-gray-900 dark:text-[#A1A1AA]">
-              <!-- Country name -->
-              <img src = "{{ stadium.imgs | get_stadium_img }}" width="190" height="127" />
-            </td>
-            <td class="px-2 py-4 whitespace-nowrap text-sm font-medium text-gray-900 dark:text-[#A1A1AA]">
-              <!-- Country name -->
-              <a href="#">
-                <span class="hover:underline">{{ stadium.name }}</span>
-              </a>
-            </td>  
-            <td class="px-2 py-4 whitespace-nowrap text-sm font-medium text-gray-900 dark:text-[#A1A1AA]">
-              <span>
-                  {{ stadium.grass_type }}
-              </span>
-            </td>  
-            <td class="px-2 py-4 whitespace-nowrap text-sm font-medium text-gray-900 dark:text-[#A1A1AA]">
-              <span>
-                {% if stadium.crowd_capacity %}
-                  {{ stadium.crowd_capacity }}
-                {% else %}
-                  -
-                {% endif %}
-              </span>
-            </td>  
-            <td class="px-2 py-4 whitespace-nowrap text-sm font-medium text-gray-900 dark:text-[#A1A1AA]">
-              <span>
-                {% if stadium.staterooms %}
-                  {{ stadium.staterooms }}
-                {% else %}
-                  -
-                {% endif %}
-              </span>
-            </td>  
-            <td class="px-2 py-4 whitespace-nowrap text-sm font-medium text-gray-900 dark:text-[#A1A1AA]">
-              <span>
-                {{ stadium.build_value | passToFloat }}
-              </span>
-            </td>  
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
+
+      <div class="overflow-auto pr-3"> 
+        <table class="min-w-[800px] md:min-w-full">
+          <thead class="border-bottom-white border-solid border-b-[#a1a1aa30] border-b-solid border-b-[1px] text-gray-900 dark:text-[#A1A1AA]">
+            <tr class="">
+              <!-- Table headers -->
+              <th scope="col" class="text-xs md:text-sm lg:text-md px-2 py-4 text-left">#</th>
+              <th scope="col" class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap text-left sticky dark:bg-zinc-900 left-0 z-10 pl-3">
+                <!-- Column header for stadium -->
+                <a href="{% url 'stadium_list' %}?field=name{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
+                  Estádio <i class="fa fa-caret-down" aria-hidden="true"></i>
+                </a>
+              </th>
+              <th scope="col" class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap text-left">
+                <!-- Column header for stadium -->
+                <a href="{% url 'stadium_list' %}?field=grass_type{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
+                  Gramado <i class="fa fa-caret-down" aria-hidden="true"></i>
+                </a>
+              </th>
+              <th scope="col" class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap text-left">
+                <!-- Column header for stadium -->
+                <a href="{% url 'stadium_list' %}?field=crowd_capacity{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
+                  Capacidade <i class="fa fa-caret-down" aria-hidden="true"></i>
+                </a>
+              </th>
+              <th scope="col" class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap text-left">
+                <!-- Column header for stadium -->
+                <a href="{% url 'stadium_list' %}?field=staterooms{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
+                  Camarotes <i class="fa fa-caret-down" aria-hidden="true"></i>
+                </a>
+              </th>
+              <th scope="col" class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap text-right">
+                <!-- Column header for stadium -->
+                <a href="{% url 'stadium_list' %}?field=build_value{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
+                  Valor de construção <i class="fa fa-caret-down" aria-hidden="true"></i>
+                </a>
+              </th>
+            </tr>
+          </thead>
+          <tbody class="text-gray-900 dark:text-[#A1A1AA]">
+            <!-- Loop through countries -->
+            {% for stadium in page_obj %}
+            <!-- Apply row class -->
+            <tr class="border-b-[#a1a1aa30] border-b-solid border-b-[1px]">
+              <td class="px-2 py-4 whitespace-nowrap text-xs md:text-sm lg:text-md flex flex-col justify-left align-center">
+                <!-- Country name -->
+                <img src = "{{ stadium.imgs | get_stadium_img }}" width="190" height="127" class="min-w-[40px]" />
+              </td>
+              <td class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap text-left sticky dark:bg-zinc-900 left-0 z-10 pl-3">
+                <!-- Country name -->
+                <a href="#">
+                  <span class="hover:underline">{{ stadium.name }}</span>
+                </a>
+              </td>  
+              <td class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap text-left">
+                <span>
+                    {{ stadium.grass_type }}
+                </span>
+              </td>  
+              <td class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap text-left">
+                <span>
+                  {% if stadium.crowd_capacity %}
+                    {{ stadium.crowd_capacity }}
+                  {% else %}
+                    -
+                  {% endif %}
+                </span>
+              </td>  
+              <td class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap text-left">
+                <span>
+                  {% if stadium.staterooms %}
+                    {{ stadium.staterooms }}
+                  {% else %}
+                    -
+                  {% endif %}
+                </span>
+              </td>  
+              <td class="text-xs md:text-sm lg:text-md font-light px-2 py-4 whitespace-nowrap sticky dark:bg-zinc-900 left-[60px] z-10 text-right">
+                <span>
+                  {{ stadium.build_value | passToFloat }}
+                </span>
+              </td>  
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 </div>
