--- a/countries/templates/countries/country_detail.html
+++ b/countries/templates/countries/country_detail.html
@@ -13,122 +13,122 @@
 
 <div class="inline-block m-auto m-auto mb-4 pr-1 m-auto relative left-1/2 -translate-x-1/2 pl-10">
   <img width="36" height="16" src="{{ country_flag }}" class="inline-block country_flag absolute top-1/2 transform -translate-y-[50%] left-2"/>
-  <h2 class="inline-block sm:px-2 lg:px-4 dark:text-white text-2xl font-regular">
+  <h2 class="inline-block px-4 dark:text-white text-2xl font-regular">
     {{ country.name | upper }} 
   </h2>
 </div>
 
-<div class="highlights mb-6 mt-9 flex justify-start gap-6 px-8">
-  <div class='w-[20%]'>
-    <p class="text-xs text-left font-sm block w-auto dark:text-[#A1A1AA] absolute transform translate-y-[-100%]">PRINCIPAL LIGA</p>
-    <div class="highlight_card h-full w-full max-w-sm dark:bg-zinc-900 forced-colors:outline rounded-lg   
-    dark:before:rounded-xl 
-    dark:shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
-    dark:before:shadow-[0px_2px_8px_0px_rgba(0,_0,_0,_0.20),_0px_1px_0px_0px_rgba(255,_255,_255,_0.06)_inset]
-    dark:before:pointer-events-none
-    dark:before:absolute">
-
-      {% if top_league %}
-      <div class="flex flex-col items-center py-5 px-4">
-        <img class=" h-24 mb-3" src="/media/images/leagues/{{top_league.slug}}{{top_league.id}}.png" alt="{{top_league.name}}"/>
-        <a href="{% url 'country_league_detail' country_pk=country.pk pk=top_league.pk %}" class="dark:text-white mb-1 text-xl font-medium text-gray-900 min-h-[60px] text-center">{{top_league.name}}</a>
-        {% if "-" in top_league.balance %}
-            <span class="text-lg text-red-700 font-bold">{{ top_league.balance|passToFloat }}</span>       
-        {% else %}
-            <span class="text-lg text-green-700 font-bold">{{ top_league.balance|passToFloat }}</span>      
-        {% endif %}
-      </div>
-      {% else %}
-      <p class="text-xs text-center font-sm block w-auto p-1 dark:text-[#A1A1AA]">SEM DADOS</p>
-      {% endif %}
-    </div>
-  </div>
-
-  <div class='w-[20%]'>
-    <p class="text-xs text-left font-sm block w-auto dark:text-[#A1A1AA] absolute transform translate-y-[-100%]">TIME MAIS VALIOSO</p>
-    <div class="highlight_card h-full w-full max-w-sm dark:bg-zinc-900 forced-colors:outline rounded-lg 
-    dark:before:rounded-xl 
-    dark:shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
-    dark:before:shadow-[0px_2px_8px_0px_rgba(0,_0,_0,_0.20),_0px_1px_0px_0px_rgba(255,_255,_255,_0.06)_inset]
-    dark:before:pointer-events-none
-    dark:before:absolute
-    ">
-      {% if top_team %}
-      <div class="flex flex-col items-center py-5 px-4">
-          <img class=" h-24 mb-3" src="/media/images/teams/{{top_team.slug}}{{top_team.id}}.png" alt="{{top_team.name}}"/>
-          <a href="{% url 'country_team_detail' country_pk=country.pk pk=top_team.pk %}" class="mb-1 text-xl dark:text-white min-h-[60px] text-center"> {{top_team.name}}</a>
-          <span class="text-lg text-green-700 font-bold">{{top_team.total_market_value|passToFloat }}</span>
-      </div>
-      {% else %}
-      <p class="text-xs text-center font-sm block w-auto p-1 dark:text-[#A1A1AA]">SEM DADOS</p>
-      {% endif %}
-    </div>
-  </div>
-
-
-
-  <div class="relative w-[60%]">
-    <p class="text-xs text-center block w-auto dark:text-[#A1A1AA] absolute transform translate-y-[-100%] ">TOP 3 JOGADORES QUE JOGAM NO PAÍS</p>
-
-    <!-- Table for displaying league data -->
-    <div class="overflow-auto shadow h-full">
-      <div class="px-3 rounded-lg h-full overflow-hidden dark:bg-zinc-900 forced-colors:outline border-t-[1px] border-t-[#a1a1aa30]   
+<div class="highlights mb-6 mt-9 flex justify-start gap-6 lg:gap-6 sm:px-6 lg:px-8 flex-col lg:flex-row">
+  <div class="flex w-full lg:w-1/2 gap-4 lg:gap-6">
+    <div class='w-full lg:w-1/2'>
+      <p class="text-xs text-left font-sm block w-auto dark:text-[#A1A1AA] absolute transform translate-y-[-100%]">PRINCIPAL LIGA</p>
+      <div class="highlight_card h-full w-full max-w-sm dark:bg-zinc-900 forced-colors:outline rounded-lg   
       dark:before:rounded-xl 
       dark:shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
       dark:before:shadow-[0px_2px_8px_0px_rgba(0,_0,_0,_0.20),_0px_1px_0px_0px_rgba(255,_255,_255,_0.06)_inset]
       dark:before:pointer-events-none
-      dark:before:absolute">        
+      dark:before:absolute">
+  
+        {% if top_league %}
+        <div class="flex flex-col items-center py-5 px-4">
+          <img class="h-16 lg:h-24 mb-3" src="/media/images/leagues/{{top_league.slug}}{{top_league.id}}.png" alt="{{top_league.name}}"/>
+          <a href="{% url 'country_league_detail' country_pk=country.pk pk=top_league.pk %}" class="dark:text-white mb-1 text-md lg:text-xl font-medium text-gray-900 min-h-[50px] lg:min-h-[60px] text-center">{{top_league.name}}</a>
+          {% if "-" in top_league.balance %}
+              <span class="text-md lg:text-lg text-red-700 font-bold">{{ top_league.balance|passToFloat }}</span>       
+          {% else %}
+              <span class="text-md lg:text-lg text-green-700 font-bold">{{ top_league.balance|passToFloat }}</span>      
+          {% endif %}
+        </div>
+        {% else %}
+        <p class="text-xs text-center font-sm block w-auto p-1 dark:text-[#A1A1AA]">SEM DADOS</p>
+        {% endif %}
+      </div>
+    </div>
+  
+    <div class='w-full lg:w-1/2'>
+      <p class="text-xs text-left font-sm block w-auto dark:text-[#A1A1AA] absolute transform translate-y-[-100%]">TIME MAIS VALIOSO</p>
+      <div class="highlight_card h-full w-full max-w-sm dark:bg-zinc-900 forced-colors:outline rounded-lg 
+      dark:before:rounded-xl 
+      dark:shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
+      dark:before:shadow-[0px_2px_8px_0px_rgba(0,_0,_0,_0.20),_0px_1px_0px_0px_rgba(255,_255,_255,_0.06)_inset]
+      dark:before:pointer-events-none
+      dark:before:absolute
+      ">
+        {% if top_team %}
+        <div class="flex flex-col items-center py-5 px-4">
+            <img class="h-16 lg:h-24 mb-3" src="/media/images/teams/{{top_team.slug}}{{top_team.id}}.png" alt="{{top_team.name}}"/>
+            <a href="{% url 'country_team_detail' country_pk=country.pk pk=top_team.pk %}" class="mb-1 text-md lg:text-xl dark:text-white min-h-[50px] lg:min-h-[60px] text-center"> {{top_team.name}}</a>
+            <span class="text-md lg:text-lg text-green-700 font-bold">{{top_team.total_market_value|passToFloat }}</span>
+        </div>
+        {% else %}
+        <p class="text-xs text-center font-sm block w-auto p-1 dark:text-[#A1A1AA]">SEM DADOS</p>
+        {% endif %}
+      </div>
+    </div>
+  </div>
+
+  <div class="relative w-full lg:w-[60%]">
+    <p class="text-xs text-center block w-auto dark:text-[#A1A1AA] absolute transform translate-y-[-100%] ">TOP 3 JOGADORES QUE JOGAM NO PAÍS</p>
+
+    <!-- Table for displaying league data -->
+    <div class="overflow-auto shadow h-full">
+      <div class="px-1 rounded-lg h-full overflow-hidden dark:bg-zinc-900 forced-colors:outline border-t-[1px] border-t-[#a1a1aa30]   
+        dark:before:rounded-xl 
+        dark:shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
+        dark:before:shadow-[0px_2px_8px_0px_rgba(0,_0,_0,_0.20),_0px_1px_0px_0px_rgba(255,_255,_255,_0.06)_inset]
+        dark:before:pointer-events-none
+        dark:before:absolute">        
         <table class="min-w-full h-full">
-          <thead class="border-b-[#a1a1aa30] border-b-solid border-b-[1px]">
+          <thead class="border-bottom-white border-solid border-b-[#a1a1aa30] border-b-solid border-b-[1px] text-gray-900 dark:text-[#A1A1AA]">
             <tr>
               <th
                 scope="col"
-                class="px-2 py-2 text-sm font-medium text-gray-900 dark:text-[#A1A1AA] text-center"
+                class="text-xs md:text-sm lg:text-md px-1 py-4 text-center"
               >
   
                   Jogador
               </th>
               <th
                 scope="col"
-                class="px-2 py-2 text-sm font-medium text-gray-900 dark:text-[#A1A1AA] text-left"
+                class="text-xs md:text-sm lg:text-md px-1 py-4 text-left"
               >
                   Posição
               </th>
               <th
                 scope="col"
-                class="px-2 py-2 text-sm font-medium text-gray-900 dark:text-[#A1A1AA] text-left"
+                class="text-xs md:text-sm lg:text-md px-1 py-4 text-center"
               >
                   País de origem 
               </th>
               <th
                 scope="col"
-                class="px-2 py-2 text-sm font-medium text-gray-900 dark:text-[#A1A1AA] text-right"
+                class="text-xs md:text-sm lg:text-md px-1 py-4 text-right"
               >
   
                   Valor de mercado 
               </th>
             </tr>
           </thead>
-          <tbody>
-  
+
+          <tbody class="text-gray-900 dark:text-[#A1A1AA]">
             {% if top_players %}
             {% for player in top_players %}
             <tr class="border-b-[#a1a1aa30] border-b-solid border-b-[1px]">
-              <td class="px-2 py-2 whitespace-nowrap text-sm font-medium text-gray-900 dark:text-[#A1A1AA] flex flex-col justify-left align-left">
+              <td class="text-xs md:text-sm lg:text-md px-1 py-2 whitespace-normal font-medium text-gray-900 dark:text-[#A1A1AA] flex flex-col justify-left align-left">
                 <img width="52" height="52" src="{{ player.img }}" class="object-cover rounded-full w-[35px] h-[35px] m-auto block">
-                  <a href="#" class="gap-1 text-center hover:underline">
+                  <a href="#" class="gap-1 text-center hover:underline w-[70px] m-auto">
                     {{ player.name }}
                   </a>
               </td>
   
-              <td class="px-2 py-2 whitespace-nowrap text-sm font-medium text-gray-900 dark:text-[#A1A1AA]">
+              <td class="text-xs md:text-sm lg:text-md font-light px-1 py-4 whitespace-normal w-[70px]">
                 <span>{{ player.pos }}</span>
               </td>
-              <td class="text-sm text-gray-900 dark:text-[#A1A1AA] font-light px-2 py-2 whitespace-nowrap">
+              <td class="text-xs md:text-sm lg:text-md font-light px-1 py-4 whitespace-nowrap text-center">
                 <img src="{{ player.country_flag }}"  title="{{ player.country_name }}" class="inline-block"/>
                 <span>{{ player.country_name }}</span>
               </td>
-              <td class="px-2 py-2 whitespace-nowrap text-sm font-medium text-gray-900 dark:text-[#A1A1AA] text-right">
+              <td class="text-xs md:text-sm lg:text-md font-light px-1 py-4 whitespace-nowrap text-right">
                 <span class="text-green-700 font-bold">{{ player.value_market|passToFloat }}</span>
               </td>
             </tr>
@@ -146,7 +146,6 @@
       </div>
     </div>
   </div>
-
 </div>
 
 
